--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -12,15 +12,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-            node-version: '20'
 
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          node-version: '20'
-      
+          distribution: 'temurin'
+
       - name: Setup SonarCloud
         uses: SonarSource/sonarcloud-github-action@v1
         env:
